applications/headlamp/templates/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: headlamp-gateway
  namespace: headlamp
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  gatewayClassName: cilium
  addresses:
    - type: IPAddress
      value: 192.168.0.202
  listeners:
    - name: headlamp-https
      protocol: HTTPS
      port: 8444
      hostname: headlamp.linuxadmin.eu
      tls:
        mode: Terminate
        certificateRefs:
        - name: headlamp-tls-secret
          kind: Secret
      allowedRoutes:
        namespaces:
          from: Same
