applications/headlamp/templates/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  labels:
    app.kubernetes.io/instance: headlamp
  name: headlamp
  namespace: headlamp
spec:
  hostnames:
  - headlamp.linuxadmin.eu
  - headlamp.vpn.linuxadmin.eu
  parentRefs:
  - group: gateway.networking.k8s.io
    kind: Gateway
    name: cilium-gateway-https
    namespace: kube-system
  rules:
  - backendRefs:
    - group: ""
      kind: Service
      name: headlamp
      port: 80
      weight: 1
    filters:
    - requestHeaderModifier:
        add:
        - name: "Authorization"
          value: "Bearer <secbear>"
    matches:
    - path:
        type: PathPrefix
        value: /
